-fix responsive pada social media component -fix responsive pada profile picture - menambahkan align center pada header content -mengubah ukuran container menjadi 80%

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p{
 /* ---------------------*/
 
 .container{
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -231,6 +231,7 @@ p{
 /* -------HEADER CONTENT------- */
 .header-content{
     display: flex;
+    align-items: center;
     width: 100%;
     flex: 1;
     color: white;
@@ -329,16 +330,6 @@ p{
     color: var(--clr-secondary);
 }
 
-@media screen and (max-width: 780px) {
-    .header-content{
-        flex-direction: column;
-    }
-
-    .content__wrapper{
-        text-align: center;
-    }
-}
-
 /* -------------SOCIAL MEDIA BUTTONS---------- */
 
 .content__sm{
@@ -367,6 +358,46 @@ p{
 
 .content__sm li:hover a{
     color: var(--clr-primary-2);
+}
+
+@media screen and (max-width: 780px) {
+    .header-content{
+        flex-direction: column;
+    }
+
+    .author-pic__wrapper{
+        width: 300px;
+        height: 300px;
+    }
+
+    .author-pic__wrapper::before{
+        inset: -5px 120px;
+    }
+    
+    .author-pic__wrapper:hover::before{
+        inset: -5px 0;
+    }
+    
+    .author-pic__wrapper::after{
+        inset: 4px;
+    }
+    
+    .author-pic__inner{
+        inset: 15px;
+        border: 4px solid #070a1c;
+    }
+    
+    .author-pic__inner img{
+        object-position: 0 -3rem;
+    }
+
+    .content__wrapper{
+        text-align: center;
+    }
+
+    .content__sm{
+        justify-content: center;
+    }
 }
 
 /* -------------SCROLL---------- */
